--- a/My Shop/style.css
+++ b/My Shop/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+h1{
+  text-align: center;
+  color: black;
+  margin-bottom: 50px;
+}
 #customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -27,4 +32,22 @@
   }
   .productImg{
     width: 100px;
+  }
+  .card{
+   
+
+  }
+  .cardBody{
+    width: 400px;
+    height: 200px;
+    border: 1px solid black;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin: 10px auto;
+  }
+  .cardBody img{
+    width: 50%;
+    margin-left: 10px;
   }
